--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,18 +1,52 @@
-<section class="property-binding">
-  
-  <article>
-    <h3>Interpolation / Interpolação</h3>
-    <p>String renderizada com interpolação: {{ url }}</p>
-    <p>Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
-    <p>Resultado de 1 + 1 não é {{ 1 + 1 + getValor() }}</p>
-    <p>Curso de Angular e gosto do curso: {{ cursoAngular && getCurtirCurso() }}</p>
-  </article>
-  
-  <article>
-    <h3>Property Binding</h3>
-    <img src="{{ urlImage }}">
-    <img [src]="urlImage">
-    <img bind-src="urlImage">
-  </article>
+<section class="property binding">
+    <!--article>
+        <h3>Interpolation / Interpolação</h3>
+        <p>String renderizada com interpolação: {{ url }}</p>
+        <p> Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
+        <p>Resultado de 1 + 1 não é: {{ 1 + 1 + getValor() }}</p>
+        <p>Curso de Angular e gosto do curso: {{ cursoAngular && getCurtirCurso() }}</p>
+    </article>
+
+    <article>
+        <img src="{{ urlImagem }}">
+        <img [src]="urlImagem">
+        <img bind-src="urlImagem">
+    </article-->
+
+    <article>
+        <h3>Class e Style Binding</h3>
+        <div>
+            Selecione uma classe
+            <select #classe (change)="0">
+                <option value="alert-success">Success</option>
+                <option value="alert-info">Info</option>
+                <option value="alert-warning">Warning</option>
+                <option value="alert-danger">Danger</option>
+            </select>
+            <br><br>
+
+
+            <div class="alert {{ classe.value }}" role="alert">
+                Texto colorido conforme valor do combobox.
+            </div>
+
+              <div class="alert" role="alert"
+              [class.alert-success]="classe.value == 'alert-success'">
+                A simple success alert—check it out!
+              </div>
+              <div class="alert" role="alert"
+              [class.alert-info]="classe.value == 'alert-info'">
+                A simple info alert—check it out!
+              </div>
+              <div class="alert" role="alert"
+              [class.alert-warning]="classe.value == 'alert-warning'">
+                A simple warning alert—check it out!
+              </div>
+              <div class="alert" role="alert"
+              [class.alert-danger]="classe.value == 'alert-danger'">
+                A simple danger alert—check it out!
+              </div>
+        </div>
+    </article>
 
 </section>
