--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -13,7 +13,7 @@
         <img bind-src="urlImagem">
     </article-->
 
-    <article>
+    <!--article>
         <h3>Class e Style Binding</h3>
         <div>
             Selecione uma classe
@@ -47,6 +47,72 @@
                 A simple danger alert—check it out!
               </div>
         </div>
-    </article>
+    </article-->
+
+    <!--section class="event-binding">
+      <article>
+        <h3>Event binding</h3>
+        <div>
+          <button (click)="botaoClicado()"
+          class="btn btn-primary">Me clique
+          </button>
+          <br><br>
+
+          <input type="text"
+            (keyup)="onKeyUp($event)" 
+            (keyup.enter)="salvarValor(campoInput.value)"
+            (blur)="salvarValor(campoInput.value)"
+            #campoInput/>
+
+
+          <p>Valor atual: {{ valorAtual }}</p>
+          <p>Valor salvo: {{ valorSalvo }}</p>
+
+          <br><br>
+
+          <span
+            (mouseover)="onMouseOverOut()"
+            (mouseout)="onMouseOverOut()"
+            [class.highlight]="isMouseOver">
+            Passe o mouse sobre mim
+          </span>
+        </div>
+      </article>
+    </section-->
+<!-- 
+    <section class="two-way-binding">
+      <article>
+        <h3>Two-way data binding</h3>
+        <div>
+
+          <input type="text"
+            [value]="nome"
+            (input)="nome = $event.target.value"
+          />
+
+          <input type="text"
+          [ngModel]="nome"
+          (ngModelChange)="nome = $event"
+          />
+
+          <input type="text" [(ngModel)]="nome">
+
+          <p>Você digitou: {{ nome }}</p>
+
+        </div>
+
+        <div>
+          <p>Meu nome é: {{ pessoa.nome }} e possuo {{ pessoa.idade }} anos de idade.</p>
+          <input type="text" [(ngModel)]="pessoa.nome">
+          <input type="text" [(ngModel)]="pessoa.idade">
+        </div> 
+
+
+
+
+      </article>
+    </section>
+  -->
+
 
 </section>
