--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -106,13 +106,19 @@
           <input type="text" [(ngModel)]="pessoa.nome">
           <input type="text" [(ngModel)]="pessoa.idade">
         </div> 
-
-
-
-
       </article>
     </section>
   -->
+
+    <section class="input-output-properties">
+      <article>
+        <h3>Input/Output Properties</h3>
+
+        <app-curso [nome]="nomeDoCurso"></app-curso>
+
+      </article>
+    </section>
+  
 
 
 </section>
