--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -116,8 +116,14 @@
 
         <app-curso [nome]="nomeDoCurso"></app-curso>
 
+        <contador [valor]="valorInicial"
+        (mudouValor)="onMudouValor($event)">
+
+        </contador>
       </article>
     </section>
+
+    
   
 
 
