--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo" ></app-ciclo>
+<!-- <app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo" ></app-ciclo>
 <button (click)="mudarValor()">Mudar Valor</button>
-<button (click)="destruirCiclo()">Deletar</button>
+<button (click)="destruirCiclo()">Deletar</button> -->
+
+<app-data-binding></app-data-binding>
