--- a/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -1,1 +1,33 @@
-<p>diretiva-ngif works!</p>
+<h5>*ngIf</h5>
+
+<div *ngIf="curso.length > 0">
+    Lista de cursos aqui:
+</div>
+
+<div *ngIf="curso.length == 0 ">
+    Não existem cursos para serem listados.
+</div>
+
+<div *ngIf="mostrarCursos">
+    Lista de cursos aqui:
+</div>
+
+<div *ngIf="!mostrarCursos">
+    Não existem cursos para serem listados.
+</div>
+
+<br><br>
+
+<button (click)="onMostrarCursos()">Mostrar ou esconder cursos</button>
+
+<h5>
+    hidden como alternativa
+</h5>
+
+<div [hidden]="!mostrarCursos">
+    Lista de cursos aqui:
+</div>
+
+<div [hidden]="mostrarCursos">
+    Não existem cursos para serem listados.
+</div>
