--- a/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -31,3 +31,15 @@
 <div [hidden]="mostrarCursos">
     Não existem cursos para serem listados.
 </div>
+
+<h5>Removendo o * e usando template</h5>
+
+<div *ngIf="mostrarCursos">
+    Lista de cursos aqui:
+</div>
+
+
+<ng-template [ngIf]="mostrarCursos">
+    <div>Lista de cursos aqui.</div>
+</ng-template>
+
