--- a/diretivas/src/styles.css
+++ b/diretivas/src/styles.css
@@ -1,3 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+.diretiva-ngclass{
+    width: 100px;
+    height: 100px;
+    background: black;
+}
+
+.diretiva-ngclassRed{
+    width: 50px;
+    height: 50px;
+    background: red;
+}
+
+.diretiva-ngclassGreen{
+    width: 60px;
+    height: 60px;
+    background: green;
+}
