--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -3,4 +3,5 @@
 
 <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
 
-<app-diretiva-ngclass></app-diretiva-ngclass>
+<!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
+<app-diretiva-ngstyle></app-diretiva-ngstyle>
