--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,6 +1,6 @@
 <section class="property-binding">
   
-  <article>
+  <!--article>
     <h3>Interpolation / Interpolação</h3>
     <p>String renderizada com interpolação: {{ url }}</p>
     <p>Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
@@ -13,6 +13,13 @@
     <img src="{{ urlImage }}">
     <img [src]="urlImage">
     <img bind-src="urlImage">
+  </article-->
+
+  <article>
+    <h3>Class e Style Binding</h3>
+    <div>
+      Selecione uma classe 
+    </div>
   </article>
 
 </section>
