--- a/teste/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/teste/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,4 +1,4 @@
-<p FundoAmarelo>
+<!-- <p FundoAmarelo>
   Texto com fundo amarelo.
 </p>
 
@@ -13,8 +13,28 @@
 </p> -->
 
 
-<p [highlight]="'red'" [defaultColor]="'grey'">
+<!-- <p [highlight]="'red'" [defaultColor]="'grey'">
   Texto com highlight com cores customizadas.
-</p>
+</p> --> 
 
+<div *ngIf="mostrarCursos">
+  Lista de cursos aqui:
+</div>
+
+<div *ngElse="mostrarCursos">
+  Não existem cursos para serem listados.
+</div>
+
+<br><br>
+
+<button (click)="onMostrarCursos()">
+  Mostrar ou esconder cursos
+</button>
+
+
+<template [ngElse]="mostrarCursos">
+  <div>
+    Não existem cursos para serem listados.
+  </div>
+</template>
 
