--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-diretiva-ngif></app-diretiva-ngif> -->
 <!-- <app-diretiva-ngswitch></app-diretiva-ngswitch> -->
-
 <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
-
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
-<app-diretiva-ngstyle></app-diretiva-ngstyle>
+<!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
+
+<app-diretivas-customizadas></app-diretivas-customizadas>
