--- a/rotas-atualizado/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/rotas-atualizado/src/app/alunos/aluno-form/aluno-form.component.html
@@ -1,1 +1,26 @@
-<p>aluno-form works!</p>
+<h5>
+    Criar/Editar Aluno
+</h5>
+
+<div class="row">
+    <div class="col s12">
+      <div class="row">
+        <div class="input-field col s12">
+          <input disabled [(ngModel)]="aluno.id" id="disabled" type="text" class="validate">
+          <label for="disabled" class="active">#</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="nome" [(ngModel)]="aluno.nome" class="validate">
+          <label for="password" class="active">Nome </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="email" [(ngModel)]="aluno.email" class="validate">
+          <label for="email" class="active">Email</label>
+        </div>
+      </div>
+    </div>
+  </div>
