--- a/rotas-atualizado/src/app/alunos/alunos.component.html
+++ b/rotas-atualizado/src/app/alunos/alunos.component.html
@@ -1,3 +1,17 @@
-<p>alunos works!</p>
+<div class="row">
+    <div class="col s6">
+        <p>
+            alunos works!
+        </p>
 
-<router-outlet></router-outlet>
+        <div class="collection">
+            <a class="collection-item"
+            *ngFor="let aluno of alunos" 
+            [routerLink]="aluno.id"
+            >{{ aluno.nome }}</a>
+        </div>
+    </div>  
+    <div class="col s6">  
+        <router-outlet></router-outlet >
+    </div>
+</div>
