--- a/rotas-atualizado/src/app/cursos/cursos.component.html
+++ b/rotas-atualizado/src/app/cursos/cursos.component.html
@@ -5,9 +5,9 @@
 <p>Página: {{ pagina }}</p>
 
 <div class="collection">
-    <a href="#!" class="collection-item"
+    <a class="collection-item"
         *ngFor="let curso of cursos" 
-        [routerLink]="['/curso', curso.id]">
+        [routerLink]="['/cursos', curso.id]">
     {{ curso.nome  }}
     </a>
 
