--- a/rotas-atualizado/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/rotas-atualizado/src/app/alunos/aluno-form/aluno-form.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="nome" [(ngModel)]="aluno.nome" class="validate">
+          <input id="nome" [(ngModel)]="aluno.nome" class="validate" (input)="onInput()">
           <label for="password" class="active">Nome </label>
         </div>
       </div>
