--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -2,12 +2,12 @@
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome"
-        [ngModel]="usuario.nome">
+        [ngModel]="usuario.nome" required>
     </div>
     <div class="form-group">
         <label for="email">Email</label>
         <input type="email" class="form-control" name="email" id="email" placeholder="nome@email.com"
-        [ngModel]="usuario.email">
+        [ngModel]="usuario.email" required email>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
