--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,17 +1,24 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <div class="form-group">
-        <label for="nome">Nome</label>
+    <div class="form-group"
+    [class.has-error]="!nome.valid && nome.touched">
+        <label for="nome" class="control-label">Nome</label>
         <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome"
-        [ngModel]="usuario.nome" required #nome>
-        <div>
-            {{ nome.className }}
+        [ngModel]="usuario.nome" required #nome="ngModel">
+        
+        <div *ngIf="!nome.valid && nome.touched" class="alert alert-danger">
+            Nome é obrigatório.
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group"
+    [class.has-error]="!email.valid && email.touched">
         <label for="email">Email</label>
         <input type="email" class="form-control" name="email" id="email" placeholder="nome@email.com"
-        [ngModel]="usuario.email" required email>
+        [ngModel]="usuario.email" required email #email="ngModel">
+
+        <div *ngIf="!email.valid && email.touched" class="alert alert-danger">
+            Email é obrigatório.
+        </div>
     </div>
+
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
- 
