--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,25 +1,95 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <div class="form-group"
     [class.has-error]="!nome.valid && nome.touched">
-        <label for="nome" class="control-label">Nome</label>
-        <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome"
-        [ngModel]="usuario.nome" required #nome="ngModel">
-        
-        <div *ngIf="!nome.valid && nome.touched" class="alert alert-danger">
-            Nome é obrigatório.
+
+        <div class="col-sm-12">
+            <label for="nome" class="control-label">Nome</label>
         </div>
+
+        <div class="col-sm-12">
+            <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome"
+            [ngModel]="usuario.nome" required #nome="ngModel">
+        </div>
+
     </div>
+
     <div class="form-group"
     [class.has-error]="!email.valid && email.touched">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" name="email" id="email" placeholder="nome@email.com"
-        [ngModel]="usuario.email" required email #email="ngModel">
 
-        <div *ngIf="!email.valid && email.touched" class="alert alert-danger">
-            Email é obrigatório.
+        <div class="col-sm-12">
+            <label for="email">Email</label>
+        </div>
+
+        <div class="col-sm-12">
+            <input type="email" class="form-control" name="email" id="email" placeholder="nome@email.com"
+            [ngModel]="usuario.email" required email #email="ngModel">
+        </div>
+    
+    </div>
+
+
+    <div class="form-group"
+    [class.has-error]="!bairro.valid && bairro.touched">
+    
+        <div class="row">
+            <div class="col-md-3">
+                <label for="bairro" class="control-label">Bairro</label>
+                <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel">
+            </div>
+    
+            <div class="col-md-3">
+                <label for="numero" class="control-label">Número</label>
+                <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel">
+            </div>
+    
+            <div class="col-md-6">
+                <label for="complemento" class="control-label">Complemento</label>
+                <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel">
+            </div>
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary"
-        [disabled]="!f.valid">Submit</button>
+    <div class="form-group">
+        <div class="col-sm-12">
+            <label for="rua" class="control-label">Rua</label>
+        </div>
+
+        <div class="col-sm-12">
+            <input type="text" class="form-control" name="rua" id="rua"
+            [ngModel]="usuario.rua" required #rua="ngModel" readonly>
+        </div>
+    </div>
+
+    <div class="form-group"
+    [class.has-error]="!bairro.valid && bairro.touched">
+        
+        <div class="row">
+            <div class="col-md-3">
+                <label for="bairro" class="control-label">Bairro</label>
+                <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel" readonly>
+            </div>
+        
+            <div class="col-md-3">
+                <label for="Cidade" class="control-label">Cidade</label>
+                <input type="text" class="form-control" id="Cidade" name="Cidade" ngModel required #Cidade="ngModel" readonly>
+            </div>
+        
+            <div class="col-md-6">
+                <label for="estado" class="control-label">Estado</label>
+                <input type="text" class="form-control" id="estado" name="estado" ngModel required #estado="ngModel" readonly>
+            </div>
+        </div>
+    </div>
+
+
 </form>
+
+<div class="col-sm-12">
+    <button type="submit" class="btn btn-primary"
+    [disabled]="!f.valid">Submit</button>
+</div>
+
+<div class="col-sm-12">
+    <app-form-debug [form]="f"></app-form-debug>
+</div>
+
