--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,9 +1,8 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <div class="form-group"
-    [class.has-error]="!nome.valid && nome.touched">
+    <div class="form-group" [ngClass]="aplicaCssErro(nome)">
 
         <div class="col-sm-12">
-            <label for="nome" class="control-label">Nome</label>
+            <label for="nome" class="control-label"><b>Nome</b></label>
         </div>
 
         <div class="col-sm-12">
@@ -13,11 +12,10 @@
 
     </div>
 
-    <div class="form-group"
-    [class.has-error]="!email.valid && email.touched">
+    <div class="form-group" [ngClass]="aplicaCssErro(email)">
 
         <div class="col-sm-12">
-            <label for="email">Email</label>
+            <label for="email"><b>Email</b></label>
         </div>
 
         <div class="col-sm-12">
@@ -27,56 +25,52 @@
     
     </div>
 
-
-    <div class="form-group"
-    [class.has-error]="!bairro.valid && bairro.touched">
-    
-        <div class="row">
-            <div class="col-md-3">
-                <label for="bairro" class="control-label">Bairro</label>
-                <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel">
-            </div>
-    
-            <div class="col-md-3">
-                <label for="numero" class="control-label">Número</label>
-                <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel">
-            </div>
-    
-            <div class="col-md-6">
-                <label for="complemento" class="control-label">Complemento</label>
-                <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel">
+    <div ngModelGroup="endereco">
+        <div class="form-group" [ngClass]="aplicaCssErro(bairro)">
+        
+            <div class="row">
+                <div class="col-md-3">
+                    <label for="cep" class="control-label"><b>Cep</b></label>
+                    <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel"
+                    (blur)="consultaCep(cep.value, f)">
+                </div>
+        
+                <div class="col-md-3">
+                    <label for="numero" class="control-label"><b>Número</b></label>
+                    <input type="text" class="form-control" id="numero" name="numero" ngModel #numero="ngModel">
+                </div>
+        
+                <div class="col-md-6">
+                    <label for="complemento" class="control-label"><b>Complemento</b></label>
+                    <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel">
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <div class="col-sm-12">
-            <label for="rua" class="control-label">Rua</label>
+        <div class="form-group" [ngClass]="aplicaCssErro(rua)">
+            <div class="col-sm-12">
+                <label for="rua" class="control-label"><b>Rua</b></label>
+                <input type="text" class="form-control" id="rua" name="rua" ngModel required #rua="ngModel" readonly>
+            </div>
         </div>
 
-        <div class="col-sm-12">
-            <input type="text" class="form-control" name="rua" id="rua"
-            [ngModel]="usuario.rua" required #rua="ngModel" readonly>
-        </div>
-    </div>
-
-    <div class="form-group"
-    [class.has-error]="!bairro.valid && bairro.touched">
-        
-        <div class="row">
-            <div class="col-md-3">
-                <label for="bairro" class="control-label">Bairro</label>
-                <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel" readonly>
-            </div>
-        
-            <div class="col-md-3">
-                <label for="Cidade" class="control-label">Cidade</label>
-                <input type="text" class="form-control" id="Cidade" name="Cidade" ngModel required #Cidade="ngModel" readonly>
-            </div>
-        
-            <div class="col-md-6">
-                <label for="estado" class="control-label">Estado</label>
-                <input type="text" class="form-control" id="estado" name="estado" ngModel required #estado="ngModel" readonly>
+        <div class="form-group" [ngClass]="aplicaCssErro(bairro)">
+            
+            <div class="row">
+                <div class="col-md-3">
+                    <label for="bairro" class="control-label"><b>Bairro</b></label>
+                    <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel" readonly>
+                </div>
+            
+                <div class="col-md-3">
+                    <label for="cidade" class="control-label"><b>Cidade</b></label>
+                    <input type="text" class="form-control" id="cidade" name="cidade" ngModel required #Cidade="ngModel" readonly>
+                </div>
+            
+                <div class="col-md-6">
+                    <label for="estado" class="control-label"><b>Estado</b></label>
+                    <input type="text" class="form-control" id="estado" name="estado" ngModel required #estado="ngModel" readonly>
+                </div>
             </div>
         </div>
     </div>
