--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,1 +1,31 @@
-<p>data-form works!</p>
+<form class="form-horizontal">
+    <div class="form-group">
+
+        <div class="col-sm-12">
+            <label for="nome" class="control-label"><b>Nome</b></label>
+        </div>
+
+        <div class="col-sm-12">
+            <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome">
+        </div>
+
+    </div>
+
+    <div class="form-group">
+
+        <div class="col-sm-12">
+            <label for="email"><b>Email</b></label>
+        </div>
+
+        <div class="col-sm-12">
+            <input type="email" class="form-control" name="email" id="email" placeholder="nome@email.com">
+        </div>
+    
+    </div>
+
+</form>
+
+<div class="col-sm-12">
+    <button type="submit" class="btn btn-primary">Submit</button>
+</div>
+
