--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -22,6 +22,7 @@
 
     <div class="col-sm-12">
         <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="btn btn-secondary" (click)="resetar">Cancel</button>
     </div>
 </form>
 
