--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -20,8 +20,8 @@
         </div>
     </div>
 
-    <div>
-        <div class="form-group" [ngClass]="aplicaCssErro('bairro')">
+    <div formGroupName="endereco">
+        <div class="form-group" [ngClass]="aplicaCssErro('endereco.bairro')">
         
             <div class="row">
                 <div class="col-md-3">
@@ -41,14 +41,14 @@
             </div>
         </div>
 
-        <div class="form-group" [ngClass]="aplicaCssErro('rua')">
+        <div class="form-group" [ngClass]="aplicaCssErro('endereco.rua')">
             <div class="col-sm-12">
                 <label for="rua" class="control-label"><b>Rua</b></label>
                 <input type="text" class="form-control" id="rua" formControlName="rua">
             </div>
         </div>
 
-        <div class="form-group" [ngClass]="aplicaCssErro('bairro')">
+        <div class="form-group" [ngClass]="aplicaCssErro('endereco.bairro')">
             
             <div class="row">
                 <div class="col-md-3">
