--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -26,7 +26,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <label for="cep" class="control-label"><b>Cep</b></label>
-                    <input type="text" class="form-control" id="cep" formControlName="cep">
+                    <input type="text" class="form-control" id="cep" formControlName="cep"
+                    (blur)="consultaCep()">
                 </div>
         
                 <div class="col-md-3">
