--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,16 +1,19 @@
-<form class="form-horizontal" [formGroup]="formulario" (ngSubmit)="onSubmit()">
-    
-    <div class="form-group" [ngClass]="aplicaCssErro('nome')">
+<form class="form-horizontal" [formGroup]="formulario">
+    <div class="form-group">
+
         <div class="col-sm-12">
             <label for="nome" class="control-label"><b>Nome</b></label>
         </div>
 
         <div class="col-sm-12">
-            <input type="text" class="form-control" formControlName="nome" id="nome" placeholder="Nome">
+            <input type="text" class="form-control" formControlName="nome" id="nome" placeholder="Nome"
+            >
         </div>
+
     </div>
 
-    <div class="form-group" [ngClass]="aplicaCssErro('email')">
+    <div class="form-group">
+
         <div class="col-sm-12">
             <label for="email"><b>Email</b></label>
         </div>
@@ -18,16 +21,16 @@
         <div class="col-sm-12">
             <input type="email" class="form-control" formControlName="email" id="email" placeholder="nome@email.com">
         </div>
+    
     </div>
 
-
-    <div class="col-sm-12">
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button class="btn btn-secondary" (click)="resetar()">Cancel</button>
-    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
 
     <app-form-debug [form]="formulario"></app-form-debug>
+
 </form>
+
+
 
 
 
