--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" [formGroup]="formulario">
+<form class="form-horizontal" [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <div class="form-group">
 
         <div class="col-sm-12">
@@ -25,6 +25,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
+    <button class="btn btn-dark" (click)="resetar()">Resetar</button>
 
     <app-form-debug [form]="formulario"></app-form-debug>
 
