--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,5 +1,6 @@
 <form class="form-horizontal" [formGroup]="formulario" (ngSubmit)="onSubmit()">
-    <div class="form-group">
+    
+    <div class="form-group" [ngClass]="aplicaCssErro('nome')">
 
         <div class="col-sm-12">
             <label for="nome" class="control-label"><b>Nome</b></label>
@@ -12,7 +13,7 @@
 
     </div>
 
-    <div class="form-group">
+    <div class="form-group" [ngClass]="aplicaCssErro('email')">
 
         <div class="col-sm-12">
             <label for="email"><b>Email</b></label>
@@ -22,6 +23,55 @@
             <input type="email" class="form-control" formControlName="email" id="email" placeholder="nome@email.com">
         </div>
     
+    </div>
+
+    <div formGroupName="endereco">
+        <div class="form-group">
+        
+            <div class="row" >
+                <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.cep')">
+                    <label for="cep" class="control-label"><b>Cep</b></label>
+                    <input type="text" class="form-control" id="cep" formControlName="cep">
+                </div>
+        
+                <div class="col-md-3">
+                    <label for="numero" class="control-label"><b>Número</b></label>
+                    <input type="text" class="form-control" id="numero" readonly>
+                </div>
+        
+                <div class="col-md-6">
+                    <label for="complemento" class="control-label"><b>Complemento</b></label>
+                    <input type="text" class="form-control" id="complemento" readonly>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-12">
+                <label for="rua" class="control-label"><b>Rua</b></label>
+                <input type="text" class="form-control" id="rua" formControlName="rua" readonly>
+            </div>
+        </div>
+
+        <div class="form-group">
+            
+            <div class="row">
+                <div class="col-md-3">
+                    <label for="bairro" class="control-label"><b>Bairro</b></label>
+                    <input type="text" class="form-control" id="bairro" formControlName="bairro" readonly>
+                </div>
+            
+                <div class="col-md-3">
+                    <label for="cidade" class="control-label"><b>Cidade</b></label>
+                    <input type="text" class="form-control" id="cidade" formControlName="cidade" readonly>
+                </div>
+            
+                <div class="col-md-6">
+                    <label for="estado" class="control-label"><b>Estado</b></label>
+                    <input type="text" class="form-control" id="estado" formControlName="estado" readonly>
+                </div>
+            </div>
+        </div>
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
