--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -31,51 +31,64 @@
             <div class="row" >
                 <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.cep')">
                     <label for="cep" class="control-label"><b>Cep</b></label>
-                    <input type="text" class="form-control" id="cep" formControlName="cep">
+                    <input type="text" class="form-control" id="cep" formControlName="cep"
+                    (blur)="consultaCep()">
                 </div>
         
-                <div class="col-md-3">
+                <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.numero')">
                     <label for="numero" class="control-label"><b>Número</b></label>
-                    <input type="text" class="form-control" id="numero" readonly>
+                    <input type="text" class="form-control" id="numero" formControlName="numero">
                 </div>
         
                 <div class="col-md-6">
                     <label for="complemento" class="control-label"><b>Complemento</b></label>
-                    <input type="text" class="form-control" id="complemento" readonly>
+                    <input type="text" class="form-control" id="complemento">
                 </div>
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-sm-12">
+            <div class="col-sm-12" [ngClass]="aplicaCssErro('endereco.rua')">
                 <label for="rua" class="control-label"><b>Rua</b></label>
-                <input type="text" class="form-control" id="rua" formControlName="rua" readonly>
+                <input type="text" class="form-control" id="rua" formControlName="rua">
             </div>
         </div>
 
         <div class="form-group">
             
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.bairro')">
                     <label for="bairro" class="control-label"><b>Bairro</b></label>
-                    <input type="text" class="form-control" id="bairro" formControlName="bairro" readonly>
+                    <input type="text" class="form-control" id="bairro" formControlName="bairro">
                 </div>
             
-                <div class="col-md-3">
+                <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.cidade')"> 
                     <label for="cidade" class="control-label"><b>Cidade</b></label>
-                    <input type="text" class="form-control" id="cidade" formControlName="cidade" readonly>
+                    <input type="text" class="form-control" id="cidade" formControlName="cidade">
                 </div>
             
-                <div class="col-md-6">
+                <div class="col-md-6" [ngClass]="aplicaCssErro('endereco.estado')">
                     <label for="estado" class="control-label"><b>Estado</b></label>
-                    <input type="text" class="form-control" id="estado" formControlName="estado" readonly>
+                    <select class="form-control" id="estado" formControlName="estado">
+                        <option *ngFor="let estado of estados | async" [value]="estado.sigla"> {{ estado.nome }} </option>
+                    </select>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="form-group">
+        <div class="col-md-6">
+            <label for="cargo" class="control-label"><b>Cargo</b></label>
+            <select class="form-control" id="cargo" formControlName="cargo" [compareWith]="compararCargos">
+                <option *ngFor="let cargo of cargos" [ngValue]="cargo"> {{ cargo.desc }} </option>
+            </select>
+        </div>
+    </div>
+
     <button type="submit" class="btn btn-primary">Submit</button>
     <button class="btn btn-dark" (click)="resetar()">Resetar</button>
+    <button class="btn btn-dark" (click)="setarCargo()">Cargo</button>
 
     <app-form-debug [form]="formulario"></app-form-debug>
 
