Comentei os códigos que estavam conflitando em algo

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="form-group" [ngClass]="aplicaCssErro('confimarEmail')">
+  <!-- <div class="form-group" [ngClass]="aplicaCssErro('confimarEmail')">
     <div class="col-sm-12">
       <label for="confimarEmail"><b>Confirmar Email</b></label>
     </div>
@@ -30,7 +30,7 @@
     <div class="col-sm-12">
       <input type="confimarEmail" class="form-control" formControlName="confimarEmail" id="confimarEmail" placeholder="nome@email.com">
     </div>
-  </div>
+  </div> -->
 
 
   <div formGroupName="endereco">
@@ -84,7 +84,7 @@
     </div>
   </div>
 
-  <div class="form-group">
+  <!-- <div class="form-group">
     <div class="row">
       <div class="col-md-4">
         <label for="cargo" class="control-label"><b>Cargo</b></label>
@@ -143,7 +143,8 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
 
   <button type="submit" class="btn btn-primary">Submit</button>
   <button class="btn btn-dark" (click)="resetar()">Resetar</button>
