--- a/requets-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requets-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="card-body">
-      <table class="table table-hover">
+      <table class="table table-hover" *ngIf="cursos$ | async as cursos; else loading">
         <thead>
           <tr>
             <th>#</th>
@@ -18,7 +18,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let curso of cursos ">
+          <tr *ngFor="let curso of cursos">
             <td>{{ curso.id }}</td>
             <td>{{ curso.nome }}</td>
             <td>
@@ -35,3 +35,8 @@
           </tr>
         </tbody>
       </table>
+      <ng-template #loading>
+        <span>Carregando Cursos...</span>
+      </ng-template>
+
+
