--- a/requets-http/src/app/shared/alert-modal/alert-modal.component.html
+++ b/requets-http/src/app/shared/alert-modal/alert-modal.component.html
@@ -1,9 +1,12 @@
-<div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
+<div class="alert alert-{{ type }} alert-dismissible fade show mb-0" role="alert">
   {{ message }}
   <button
     type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
+    class="close"
+    data-dismiss="alert"
     aria-label="Close"
-  ></button>
+    (click)="onClose()"
+  >
+    <span aria-hidden="true">&times;</span>  
+  </button>
 </div>
